# goodcode_badcode_workshop

./: README.md  make_develop_env.sh  pyproject.toml
02_01_abstraction_layer/: main.py  text_summarizer.py
02_01_abstraction_layer/data/: cat.txt
